updated contact form, fixed spacing input text area

--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -33,6 +33,10 @@
 
 .contact-right {
     flex: 1;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .contact-title {
@@ -58,9 +62,35 @@
 }
 
 .contact-description {
-    font-weight: 300;
+    font-weight: 400;
 }
 
 form {
-    
+    margin-top: 30px;
+}
+
+input {
+    width: 70%;
+    height: 50px;
+    border: none;
+    border-bottom: 1px solid black;
+    margin: 10px 0px;
+    font-size: 14px;
+    padding-left: 10px;
+}
+
+textarea {
+    width: 100%;
+    margin: 10px 0px;
+    font-size: 14px;
+    padding-left: 10px;
+    border: 1px solid black;
+}
+
+button {
+    border: none;
+    padding: 15px;
+    background-color: var(--daisy);
+    font-weight: 500;
+    cursor: pointer;
 }
